--- a/README.textile
+++ b/README.textile
@@ -1,6 +1,6 @@
 h1. Textpattern branding
 
-!https://david-dm.org/textpattern/textpattern-branding/dev-status.svg(devDependency Status)!:https://david-dm.org/textpattern/textpattern-branding#info=devDependencies !https://cdn.gruntjs.com/builtwith.png(Built with Grunt)!:http://gruntjs.com/
+!https://david-dm.org/textpattern/textpattern-branding/dev-status.svg(devDependency Status)!:https://david-dm.org/textpattern/textpattern-branding#info=devDependencies
 
 "Textpattern":http://textpattern.com branding resources.
 
